Fixed splash screen on mobile phones

--- a/src/components/SplashScreen/SplashScreen.scss
+++ b/src/components/SplashScreen/SplashScreen.scss
@@ -1,6 +1,13 @@
 @import 'variables.scss';
 
 .SplashScreen {
+  height: 100vh;
+  overflow-y: auto;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
   .splash-screen-overlay {
     position: absolute;
     z-index: 1;
@@ -26,7 +33,8 @@
     left: 0;
     top: 0;
     visibility: initial;
-    transition: left 400ms ease-out, top 400ms ease-out, visibility 400ms ease-out 350ms;
+    transition: left 400ms ease-out, top 400ms ease-out,
+      visibility 400ms ease-out 350ms;
 
     &.hidden {
       visibility: hidden;
@@ -74,7 +82,7 @@
   }
 
   #get-started-button {
-    margin-top: 40px;
+    margin: 40px 0px;
     width: 100%;
     padding: 21px 24px;
     display: flex;
